<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_settings"
        style="@style/TextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/navigation_settings"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_feature"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_0sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_settings">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_language"
                style="@style/MaterialButtonTransparent"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingStart="@dimen/_12sdp"
                android:text="@string/menu_app_language"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@color/colorCardBackground"
                app:cornerRadius="@dimen/_0sdp"
                app:icon="@drawable/ic_menu_app_language"
                app:iconPadding="@dimen/_12sdp"
                app:iconSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_theme"
        style="@style/TextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/label_theme"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_feature" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_theme"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_0sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_theme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/system_default"
                style="@style/MaterialButtonTransparent"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="@dimen/_14sdp"
                android:text="@string/theme_system_default"
                android:textSize="@dimen/_12ssp"
                app:backgroundTint="@color/colorCardBackground"
                app:cornerRadius="@dimen/_0sdp"
                app:icon="@drawable/ic_button_selector"
                app:iconPadding="@dimen/_12sdp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="@dimen/_0sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/light_mode"
                style="@style/MaterialButtonTransparent"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="@dimen/_14sdp"
                android:text="@string/theme_light_mode"
                android:textSize="@dimen/_12ssp"
                app:backgroundTint="@color/colorCardBackground"
                app:cornerRadius="@dimen/_0sdp"
                app:icon="@drawable/ic_button_selector"
                app:iconPadding="@dimen/_12sdp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/system_default"
                app:strokeWidth="@dimen/_0sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dark_mode"
                style="@style/MaterialButtonTransparent"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="@dimen/_14sdp"
                android:text="@string/theme_dark_mode"
                android:textSize="@dimen/_12ssp"
                app:backgroundTint="@color/colorCardBackground"
                app:cornerRadius="@dimen/_0sdp"
                app:icon="@drawable/ic_button_selector"
                app:iconPadding="@dimen/_12sdp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/light_mode"
                app:strokeWidth="@dimen/_0sdp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_other"
        style="@style/TextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/label_other"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_theme" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_0sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_other">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_share"
                style="@style/MaterialButtonTransparent"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingStart="@dimen/_12sdp"
                android:text="@string/menu_share_app"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@color/colorCardBackground"
                app:cornerRadius="@dimen/_0sdp"
                app:icon="@drawable/ic_menu_refer_app"
                app:iconPadding="@dimen/_12sdp"
                app:iconSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_manage_consent"
                style="@style/MaterialButtonTransparent"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingStart="@dimen/_12sdp"
                android:text="@string/menu_manage_consent"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                app:backgroundTint="@color/colorCardBackground"
                app:cornerRadius="@dimen/_0sdp"
                app:icon="@drawable/ic_menu_manage_consent"
                app:iconPadding="@dimen/_12sdp"
                app:iconSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_share" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_about_caller_id"
                style="@style/MaterialButtonTransparent"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingStart="@dimen/_12sdp"
                android:text="@string/menu_about_caller_id"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                app:backgroundTint="@color/colorCardBackground"
                app:cornerRadius="@dimen/_0sdp"
                app:icon="@drawable/ic_menu_about_caller_id"
                app:iconPadding="@dimen/_12sdp"
                app:iconSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_manage_consent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_privacy"
                style="@style/MaterialButtonTransparent"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingStart="@dimen/_12sdp"
                android:text="@string/menu_privacy_policy"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@color/colorCardBackground"
                app:cornerRadius="@dimen/_0sdp"
                app:icon="@drawable/ic_menu_privacy_policy"
                app:iconPadding="@dimen/_12sdp"
                app:iconSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_about_caller_id" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>